--- a/requirements.txt
+++ b/requirements.txt
@@ -4,57 +4,71 @@
 #
 #    pip-compile
 #
-asgiref==3.4.1
+asgiref==3.5.2
     # via django
-beautifulsoup4==4.10.0
+beautifulsoup4==4.11.1
     # via django-easy-audit
-certifi==2021.10.8
-    # via requests
-charset-normalizer==2.0.7
-    # via requests
-click==8.0.3
+build==0.8.0
     # via pip-tools
-colorama==0.4.4
-    # via click
-django==3.1.13
+certifi==2022.6.15
+    # via requests
+charset-normalizer==2.1.0
+    # via requests
+click==8.1.3
+    # via pip-tools
+colorama==0.4.5
+    # via
+    #   build
+    #   click
+django==3.2.14
     # via
     #   -r requirements.in
     #   django-easy-audit
-django-easy-audit==1.3.0
+    #   django-htmx
+django-easy-audit==1.3.3
+    # via -r requirements.in
+django-htmx==1.12.0
     # via -r requirements.in
 gunicorn==20.1.0
     # via -r requirements.in
 idna==3.3
     # via requests
-importlib-metadata==4.8.2
+importlib-metadata==4.12.0
     # via
+    #   build
     #   click
     #   pep517
+packaging==21.3
+    # via build
 pep517==0.12.0
-    # via pip-tools
-pip-tools==6.4.0
+    # via build
+pip-tools==6.8.0
     # via -r requirements.in
-pytz==2021.3
+pyparsing==3.0.9
+    # via packaging
+pytz==2022.1
     # via django
-requests==2.26.0
+requests==2.28.1
     # via -r requirements.in
-soupsieve==2.3.1
+soupsieve==2.3.2.post1
     # via beautifulsoup4
 sqlparse==0.4.2
     # via django
-tomli==1.2.2
-    # via pep517
-typing-extensions==4.0.0
+tomli==2.0.1
+    # via
+    #   build
+    #   pep517
+typing-extensions==4.3.0
     # via
     #   asgiref
     #   importlib-metadata
-urllib3==1.26.7
+urllib3==1.26.9
     # via requests
-wheel==0.37.0
+wheel==0.37.1
     # via pip-tools
 whitenoise==6.2.0
     # via -r requirements.in
-zipp==3.6.0
+zipp==3.8.0
     # via
     #   importlib-metadata
     #   pep517
