--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,8 @@ asgiref==3.5.2
     # via django
 beautifulsoup4==4.11.1
     # via django-easy-audit
+bleach==5.0.1
+    # via -r requirements.in
 build==0.8.0
     # via pip-tools
 certifi==2022.6.15
@@ -50,6 +52,8 @@ pytz==2022.1
     # via django
 requests==2.28.1
     # via -r requirements.in
+six==1.16.0
+    # via bleach
 soupsieve==2.3.2.post1
     # via beautifulsoup4
 sqlparse==0.4.2
@@ -64,6 +68,8 @@ typing-extensions==4.3.0
     #   importlib-metadata
 urllib3==1.26.9
     # via requests
+webencodings==0.5.1
+    # via bleach
 wheel==0.37.1
     # via pip-tools
 whitenoise==6.2.0
